fixed spacings and improved overall design in academics page

--- a/academic-styles.css
+++ b/academic-styles.css
@@ -40,8 +40,23 @@
     justify-content: center;
 }
 
+.mobile-title{
+    display:none;
+}
+
 
 @media (max-width:768px){
+    .desktop-title{
+        display:none;
+    }
+
+    .mobile-title{
+        display:block;
+    }
+
+    .card-spacing{
+        line-height:1.3rem;
+    }
 
     .rectangle-align {
         display: flex;
@@ -68,13 +83,13 @@
     .rectangle2,
     .rectangle3,
     .rectangle4 {
-        border-top: 0.125rem solid rgb(217, 217, 217);
-        border-right: 0.125rem solid rgb(217, 217, 217);
-        border-left: 0.125rem solid rgb(217, 217, 217);
-        border-bottom: 0.125rem solid rgb(217, 217, 217);
+        border-top: 0.1rem solid rgb(217, 217, 217);
+        border-right: 0.1rem solid rgb(217, 217, 217);
+        border-left: 0.1rem solid rgb(217, 217, 217);
+        border-bottom: 0.1rem solid rgb(217, 217, 217);
         width: calc(50% - 0.375rem);
-        height: 8.125rem;
-        padding: 0.8rem;
+        height: 9rem;
+        padding:0.2rem;
         box-sizing: border-box;
 
     }
